# Steel-Plans-API

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml
steel_plans_api/: __init__.py  __main__.py  endpoints.py  enums.py  responses.py
steel_plans_api/pipeline/: analysis.py  db.py  parsing.py  pipelines.py
tests/: conftest.py  test_api.py  test_parsing.py
